alterações na ponderada
