# ponderada-1/swagger.yaml
@@ -1,40 +1,19 @@
 openapi: 3.0.0
 info:
-  title: API de Gerenciamento de tasks
-  description: Esta é uma API simples para criar, consultar e deletar tasks.
-  version: "1.0.0"
+  title: Task and User API
+  description: API for managing tasks and users
+  version: 1.0.0
 servers:
-  - url: 'http://localhost:5000'
-    description: API de Produção
+  - url: http://localhost:5000
 paths:
   /tasks:
     get:
-      summary: lista todas as tasks
-      operationId: getTasks
-      tags:
-        - tasks
+      summary: Retrieve all tasks
       responses:
         '200':
-          description: lista de tasks
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  name:
-                    type: string
-                    example: Comprar pão
-                  description:
-                    type: string
-                    example: Comprar pão na padaria da esquina
-                  date: 
-                    type: string
-                    example: 2024-03-22
+          description: A list of tasks
     post:
-      summary: cria uma nova task
-      operationId: createTask
-      tags:
-        - tasks 
+      summary: Create a new task
       requestBody:
         required: true
         content:
@@ -44,69 +23,33 @@ paths:
               properties:
                 name:
                   type: string
-                  description: Título da task
-                  example: Comprar pão
                 description:
                   type: string
-                  description: Descrição da task
-                  example: Comprar pão na padaria da esquina
                 date:
                   type: string
-                  description: Data para aquela tarefa
-                  example: 2024-03-22
+                  format: date
+              required:
+                - name
+                - description
+                - date
       responses:
         '201':
-          description: Task criada com sucesso
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    example: '123'
-  /tasks/{id}:
+          description: The created task
+  /tasks/{taskId}:
+    parameters:
+      - in: path
+        name: taskId
+        required: true
+        schema:
+          type: integer
+          format: int64
     get:
-      summary: Pega uma task por id 
-      operationId: getTaskById
-      tags:
-        - tasks
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID da task
-          schema:
-            type: string
+      summary: Retrieve a task by ID
       responses:
         '200':
-          description: task
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  name:
-                    type: string
-                    example: Comprar pão
-                  description:
-                    type: string
-                    example: Comprar pão na padaria da esquina
-                  date: 
-                    type: string
-                    example: 2024-03-22
+          description: The requested task
     put:
-      summary: atualiza uma task
-      operationId: updateTask
-      tags:
-        - tasks
-      parameters:
-          - name: id
-            in: path
-            required: true
-            description: ID da task
-            schema:
-              type: string
+      summary: Update a task by ID
       requestBody:
         required: true
         content:
@@ -116,49 +59,92 @@ paths:
               properties:
                 name:
                   type: string
-                  description: Título da task
-                  example: Comprar pão
                 description:
                   type: string
-                  description: Descrição da task
-                  example: Comprar pão na padaria da esquina
                 date:
                   type: string
-                  description: Data para aquela tarefa
-                  example: 2024-03-22 
+                  format: date
+              required:
+                - name
+                - description
+                - date
       responses:
         '200':
-          description: Task atualizada com sucesso
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: 'ok'
+          description: The updated task
     delete:
-      summary: deleta uma task
-      operationId: deleteTask
-      tags:
-        - tasks
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID da task
-          schema:
-            type: string
+      summary: Delete a task by ID
+      responses:
+        '204':
+          description: Task deleted successfully
+  /users:
+    get:
+      summary: Retrieve all users
       responses:
         '200':
-          description: Task deletada com sucesso
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: 'ok'
+          description: A list of users
+    post:
+      summary: Create a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+              required:
+                - name
+                - email
+                - password
+      responses:
+        '201':
+          description: The created user
+  /users/{userId}:
+    parameters:
+      - in: path
+        name: userId
+        required: true
+        schema:
+          type: integer
+          format: int64
+    get:
+      summary: Retrieve a user by ID
+      responses:
+        '200':
+          description: The requested user
+    put:
+      summary: Update a user by ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+              required:
+                - name
+                - email
+                - password
+      responses:
+        '200':
+          description: The updated user
+    delete:
+      summary: Delete a user by ID
+      responses:
+        '204':
+          description: User deleted successfully
 
     
